# turbopack-wasi

./: .gitignore  PATCHES.md  README.md  built-versions.txt
patches-16.0/: 0001-turbopack-cli-utils-use-owo-colors-instead-of-crosst.patch  0002-turbopack-trace-utils-gate-signal-listening-exit-API.patch  0003-turbo-rcstr-allow-the-napi-feature-on-wasm-targets.patch  0004-turbo-persistence-allow-32-bit-targets-in-usize_from.patch  0005-turbo-tasks-fs-support-symlink-creation-on-wasi.patch  0006-turbo-tasks-fetch-stub-the-fetch-client-on-wasm-targ.patch  0007-turbopack-node-compile-the-child-process-pool-on-was.patch  0008-next-napi-bindings-enable-turbopack-and-next-api-on-.patch  0009-wasi-runtime-fixes-temp_dir-tokio-runtime-init-threa.patch  0010-next-napi-bindings-wasi-runtime-install-must-happen-.patch  0011-turbo-tasks-fetch-drop-reqwest-from-the-wasm-dep-tre.patch  0012-turbo-tasks-fetch-16.0-stub-parity-ProxyConfig-confi.patch  0013-next-napi-bindings-define-clock-for-wasi-zstd-dictio.patch  0014-turbo-tasks-fs-extract-dir-entries-inside-the-blocki.patch  0015-next-napi-bindings-hold-the-dist-dir-lockfile-unlock.patch
patches-16.1/: 0001-turbopack-cli-utils-use-owo-colors-instead-of-crosst.patch  0002-turbopack-trace-utils-gate-signal-listening-exit-API.patch  0003-turbo-rcstr-allow-the-napi-feature-on-wasm-targets.patch  0004-turbo-persistence-allow-32-bit-targets-in-usize_from.patch  0005-turbo-tasks-fs-support-symlink-creation-on-wasi.patch  0006-turbo-tasks-fetch-stub-the-fetch-client-on-wasm-targ.patch  (+6 more)
vendor-diff/next.js/crates/next-build/: Cargo.toml
(+555 files in other folders)
