[package]
name = "next-build"
version = "0.1.0"
description = "TBD"
license = "MIT"
edition = "2024"
autobenches = false

[lib]
bench = false

[lints]
workspace = true

[features]
default = ["process_pool"]
process_pool = ["next-core/process_pool"]
worker_pool = ["next-core/worker_pool"]

[dependencies]
next-core = { workspace = true, default-features = false }
turbopack-core = { workspace = true }
turbo-rcstr = { workspace = true }

